; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_drv.c_zram_stat64_sub.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_drv.c_zram_stat64_sub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zram = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.zram*, i64*, i64)* @zram_stat64_sub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zram_stat64_sub(%struct.zram* %0, i64* %1, i64 %2) #0 {
  %4 = alloca %struct.zram*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store %struct.zram* %0, %struct.zram** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.zram*, %struct.zram** %4, align 8
  %8 = getelementptr inbounds %struct.zram, %struct.zram* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load i64*, i64** %5, align 8
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %6, align 8
  %13 = sub nsw i64 %11, %12
  %14 = load i64*, i64** %5, align 8
  store i64 %13, i64* %14, align 8
  %15 = load %struct.zram*, %struct.zram** %4, align 8
  %16 = getelementptr inbounds %struct.zram, %struct.zram* %15, i32 0, i32 0
  %17 = call i32 @spin_unlock(i32* %16)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
